# graphus

./: README.md
graphus/: CMakeLists.txt  main.cpp
graphus/include/: ArcGraph.h  IGraph.h  ListGraph.h  MatrixGraph.h  SetGraph.h
graphus/src/: ArcGraph.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp
graphus/tests/: graph_test.cpp
